# opencode-db

./: .gitignore  LICENSE  Makefile  README.md  README.ru.md  README_PYPI.md  __init__.py  __main__.py  cli.py  cmd_costs.py  cmd_delete.py  cmd_export.py  cmd_help.py  cmd_info.py  cmd_list.py  cmd_projects.py  cmd_prune.py  cmd_search.py  cmd_stats.py  cmd_todos.py  cmd_tree.py  cmd_vacuum.py  cmd_view.py  config.py  db.py  formatters.py  i18n.py  install.sh  markdown_to_ansi.py  opencode-db-commands.json  pyproject.toml  utils.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
commands/: __init__.py
tests/: conftest.py  test_commands.py  test_db.py  test_formatters.py  test_i18n.py  test_utils.py
